force-app/main/default/objects/GovFees__mdt/GovFees__mdt.object-meta.xml
<CustomObject>
    <label>Gov Fees</label>
    <pluralLabel>Gov Fees</pluralLabel>
</CustomObject>