force-app/main/default/objects/GovFees__mdt/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <label>Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AGO B7</fullName>
                <default>true</default>
                <label>AGO B7</label>
            </value>
            <value>
                <fullName>IGO 50ppm</fullName>
            </value>
            <value>
                <fullName>ULG95 E5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>