force-app/main/default/objects/GovFees__mdt/fields/Handling_Type__c.field-meta.xml
<CustomField>
    <fullName>Handling_Type__c</fullName>
    <description>Applicable only for Energy Tax</description>
    <inlineHelpText>Applicable only for Energy Tax</inlineHelpText>
    <label>Handling Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EB</fullName>
            </value>
            <value>
                <fullName>CA</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>