force-app/main/default/objects/GovFees__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Energy tax</fullName>
                <default>true</default>
                <label>Energy tax</label>
            </value>
            <value>
                <fullName>CSO</fullName>
            </value>
            <value>
                <fullName>Union fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>