force-app/main/default/objects/GovFees__mdt/validationRules/Handling_Type_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Handling_Type_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
	 AND(TEXT(Type__c ) == &apos;Energy Tax&apos;
		,ISBLANK(TEXT( Handling_Type__c )))
	,AND(TEXT(Type__c ) != &apos;Energy Tax&apos;
		,NOT(ISBLANK(TEXT( Handling_Type__c ))))
)</errorConditionFormula>
    <errorDisplayField>Handling_Type__c</errorDisplayField>
    <errorMessage>Handling Type is Required and Allowed for Energy Tax only</errorMessage>
</ValidationRule>