force-app/main/default/objects/GovFees__mdt/listViews/All_Data.listView-meta.xml
<ListView>
    <fullName>All_Data</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Grade__c</columns>
    <columns>Sales_Org__c</columns>
    <columns>Type__c</columns>
    <columns>Handling_Type__c</columns>
    <columns>Value_Eur_100L__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Data</label>
    <language>en_US</language>
</ListView>